fix for holding avg/min costs to not include -bash, updated sample holding data

--- a/templates/portfolios/holdings/index.html
+++ b/templates/portfolios/holdings/index.html
@@ -17,7 +17,7 @@
       <th class="align-right">Last Price</th>
       <th class="align-right">Position</th>
       <th class="align-right">Book Value<br /><span class="small">Avg Cost</span></th>
-      <th class="align-right">Net Gain ($)<br /><span class="small">(%)</span></th>
+      <th class="align-right">Net Gain</th>
       <th class="align-right">Market Value</th>
       <th class="align-right">Portfolio Makeup</th>
     </tr>
