added app settings ability, working on twitter typeahead for adding holding

--- a/templates/portfolios/holdings/create.html
+++ b/templates/portfolios/holdings/create.html
@@ -19,6 +19,12 @@
     </div>
   </div>
   <div class="control-group">
+    <label class="control-label" for="stocks">Stock: </label>
+    <div class="controls">
+      <input id="stock_display2" type="text" class="input-xxlarge" placeholder="examples: BlackBerry:TSX, Microsoft Corp:NASDAQ" />
+    </div>
+  </div>
+  <div class="control-group">
     <div class="controls">
       <input type="submit" class="btn btn-primary" value="Add holding" />
     </div>
