--- a/templates/base.html
+++ b/templates/base.html
@@ -56,7 +56,12 @@
         </ul>
         <ul class="nav pull-right">
           {% if user.is_staff %}
-          <li><a href="/admin">Admin</a></li>
+          <li class="dropdown">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Admin<b class="caret"></b></a>
+            <ul class="dropdown-menu">
+              <li><a href="{% url 'portfolioapp.apps.admin.views.stock_index' %}">Stocks</a></li>
+            </ul>
+          </li>
           {% endif %}
           {% if not user.is_authenticated %}
           <li><a href="{% url 'profile_create' %}">Sign up</a></li>
@@ -93,6 +98,7 @@
   </div>
 </footer>
 
+<script src="{{ STATIC_URL }}js/bootstrap.min.js" type="text/javascript"></script>
 {% block script_end_outer %}{% endblock script_end_outer %}
 
 </body>
