locked down autocomplete (jqueryui), added a persistent sign in form as a drop down with bootstrap

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -41,10 +41,18 @@ table tr td.align-right {
 
 /* jquery-ui */
 
-.ui-autocomplete-loading { background:url('../img/ui-anim_basic_16x16.gif') no-repeat right center }
+.ui-autocomplete-loading { background: url('../img/ui-anim_basic_16x16.gif') no-repeat 99% center }
 
 .ui-autocomplete {
     max-height: 200px;
     overflow-y: auto;
     overflow-x: hidden;
-  }
+}
+
+.ui-menu
+{
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-size: 14px;
+  color: #333333;
+  line-height: 20px;
+}
