--- a/templates/base.html
+++ b/templates/base.html
@@ -9,8 +9,8 @@
   <meta name="viewport" content="initial-scale=1.0">
   <title>{% block title %}Home{% endblock title  %} - PortfolioApp</title>
 
-  <link href="{{ STATIC_URL }}css/bootstrap.min.css" rel="stylesheet" type="text/css" media="screen">
   <link href="http://code.jquery.com/ui/1.10.0/themes/base/jquery-ui.css" rel="stylesheet" type="text/css" media="all" />
+  <link href="{{ STATIC_URL }}css/bootstrap.min.css" rel="stylesheet" type="text/css" media="screen">
   <link href="{{ STATIC_URL }}css/styles.css" rel="stylesheet" type="text/css" media="screen">
 
   <link rel="apple-touch-icon-precomposed" sizes="144x144" href="#">
@@ -25,6 +25,7 @@
 
   <script src="http://code.jquery.com/jquery-1.9.0.js" type="text/javascript"></script>
   <script src="http://code.jquery.com/ui/1.10.0/jquery-ui.js" type="text/javascript"></script>
+  <script src="{{ STATIC_URL }}js/bootstrap.js" type="text/javascript"></script>
 
   <meta property="og:locale" content="en_US">
   <meta property="og:title" content="">
@@ -55,7 +56,7 @@
           {% endif %}
         </ul>
         <ul class="nav pull-right">
-          {% if user.is_staff %}
+          {% if user.is_admin %}
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown">Admin<b class="caret"></b></a>
             <ul class="dropdown-menu">
@@ -70,7 +71,31 @@
           <li><a href="{% url 'profile_edit' %}">{{ user.get_full_name }}</a></li>
           <li><a href="{% url 'profile_signout' %}">Sign out</a></li>
           {% else %}
-          <li><a href="{% url 'profile_signin' %}">Sign in</a></li>
+          <li class="dropdown">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Sign in<b class="caret"></b></a>
+            <div class="dropdown-menu login-menu" style="padding: 15px 15px 5px 15px;">
+              <form method="post" action="{% url 'django.contrib.auth.views.login' %}">
+                {% csrf_token %}
+                <div class="control-group">
+                  <label class="control-label" for="{{ login_form.username.auto_id }}">Email: </label>
+                  <div class="controls">
+                    <input id="{{ login_form.username.auto_id }}" type="text" name="{{ login_form.username.html_name }}" class="input-xlarge" placeholder="email address..." />
+                  </div>
+                </div>
+                <div class="control-group">
+                  <label class="control-label" for="{{ login_form.password.auto_id }}">Password: </label>
+                  <div class="controls">
+                    <input id="{{ login_form.password.auto_id }}" type="password" name="{{ login_form.password.html_name }}" class="input-xlarge" placeholder="password..." />
+                  </div>
+                </div>
+                <div class="control-group">
+                  <div class="controls">
+                    <input id="btn-login" type="submit" class="btn btn-primary" style="clear: left; width: 100%; height: 32px; font-size: 13px;" value="Sign in" />
+                  </div>
+                </div>
+              </form>
+            </div>
+          </li>
           {% endif %}
         </ul>
       </div>
@@ -90,7 +115,7 @@
 <footer>
   <div class="container">
     <div class="row">
-      <div class="span14">
+      <div class="span16">
         <hr />
         Footer
       </div>
@@ -98,7 +123,7 @@
   </div>
 </footer>
 
-<script src="{{ STATIC_URL }}js/bootstrap.min.js" type="text/javascript"></script>
+<script src="{{ STATIC_URL }}js/application.js" type="text/javascript"></script>
 {% block script_end_outer %}{% endblock script_end_outer %}
 
 </body>
