--- a/templates/base.html
+++ b/templates/base.html
@@ -61,6 +61,7 @@
             <a href="#" class="dropdown-toggle" data-toggle="dropdown">Admin<b class="caret"></b></a>
             <ul class="dropdown-menu">
               <li><a href="{% url 'portfolioapp.apps.admin.views.stock_index' %}">Stocks</a></li>
+              <li><a href="{% url 'portfolioapp.apps.admin.views.stock_index2' %}">Stocks (experimental)</a></li>
             </ul>
           </li>
           {% endif %}
