--- a/templates/portfolios/transactions/index_global.html
+++ b/templates/portfolios/transactions/index_global.html
@@ -20,10 +20,10 @@
   </tr>
   {% for transaction in transactions %}
   <tr>
-    <td>{{ transaction.date_created }}</td>
+    <td>{{ transaction.date_transacted|date:"m/d/Y" }}</td>
     <td>{{ transaction.get_type_display }}</td>
     <td>{{ transaction.holding.stock.name }} ({{ transaction.holding.stock.symbol }}:{{ transaction.holding.stock.market.acr }})</td>
-    <td class="align-right">{{ transaction.quantity|floatformat:2|intcomma }}</td>
+    <td class="align-right">{{ transaction.quantity }}</td>
     <td class="align-right">${{ transaction.value|floatformat:2|intcomma }}</td>
   </tr>
   {% endfor %}
