ajax pagination for stocks in admin area, various ways

--- a/templates/admin/markets/stocks/index.html
+++ b/templates/admin/markets/stocks/index.html
@@ -3,6 +3,9 @@
 {% block title %}Stocks - Admin{% endblock title %}
 
 {% block content %}
+
+<h1>Stocks</h1>
+<p>&nbsp;</p>
 {% if stocks %}
 <table class="table">
   <thead>
