--- a/templates/base.html
+++ b/templates/base.html
@@ -26,6 +26,8 @@
   <script src="http://code.jquery.com/jquery-1.9.0.js" type="text/javascript"></script>
   <script src="http://code.jquery.com/ui/1.10.0/jquery-ui.js" type="text/javascript"></script>
   <script src="{{ STATIC_URL }}js/bootstrap.js" type="text/javascript"></script>
+  <script src="{{ STATIC_URL }}js/dajaxice.core.js" type="text/javascript"></script>
+  <script src="{{ STATIC_URL }}js/jquery.dajax.core.js" type="text/javascript"></script>
 
   <meta property="og:locale" content="en_US">
   <meta property="og:title" content="">
