--- a/templates/admin/markets/stocks/ep_index.html
+++ b/templates/admin/markets/stocks/ep_index.html
@@ -7,13 +7,14 @@
 
 <h1>Stocks</h1>
 <p>&nbsp;</p>
-<div id="paginate">
+
+<div id="paginate" class="endless_page_template">
   {% include page_template %}
 </div>
 
 {% endblock content %}
 
 {% block script %}
-<script src="{{ STATIC_URL }}js/endless-pagination.js"></script>
-<script>$.endlessPaginate({pageSelector: 'div#paginate'});</script>
+<script src="{{ STATIC_URL }}js/endless-pagination.js" type="text/javascript"></script>
+<script type="text/javascript">$('#paginate').endlessPaginate();</script>
 {% endblock script %}
