--- a/templates/base.html
+++ b/templates/base.html
@@ -23,11 +23,12 @@
     <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
   <![endif]-->
 
-  <script src="http://code.jquery.com/jquery-1.9.0.js" type="text/javascript"></script>
+  <script src="http://code.jquery.com/jquery-1.7.0.js" type="text/javascript"></script>
   <script src="http://code.jquery.com/ui/1.10.0/jquery-ui.js" type="text/javascript"></script>
   <script src="{{ STATIC_URL }}js/bootstrap.js" type="text/javascript"></script>
   <script src="{{ STATIC_URL }}js/dajaxice.core.js" type="text/javascript"></script>
   <script src="{{ STATIC_URL }}js/jquery.dajax.core.js" type="text/javascript"></script>
+
 
   <meta property="og:locale" content="en_US">
   <meta property="og:title" content="">
@@ -62,8 +63,9 @@
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown">Admin<b class="caret"></b></a>
             <ul class="dropdown-menu">
-              <li><a href="{% url 'portfolioapp.apps.admin.views.stock_index' %}">Stocks</a></li>
-              <li><a href="{% url 'portfolioapp.apps.admin.views.stock_index2' %}">Stocks (experimental)</a></li>
+              <li><a href="{% url 'portfolioapp.apps.admin.views.stock_index' %}">Stocks (standard)</a></li>
+              <li><a href="{% url 'portfolioapp.apps.admin.views.ep_stock_index' %}">Stocks (django-endless-pagination)</a></li>
+              <li><a href="{% url 'portfolioapp.apps.admin.views.dajax_stock_index' %}">Stocks (django-dajax)</a></li>
             </ul>
           </li>
           {% endif %}
