--- a/templates/admin/markets/stocks/dajax_index.html
+++ b/templates/admin/markets/stocks/dajax_index.html
@@ -5,10 +5,14 @@
 {% block content %}
 
 <h1>Stocks</h1>
-<p>&nbsp;</p>
 
 <div id="pagination">
   {% include "admin/markets/stocks/dajax_paged_content.html" %}
 </div>
 
 {% endblock content %}
+
+{% block script %}
+<script src="{{ STATIC_URL }}js/dajaxice.core.js" type="text/javascript"></script>
+<script src="{{ STATIC_URL }}js/jquery.dajax.core.js" type="text/javascript"></script>
+{% endblock script %}
