--- a/templates/admin/markets/stocks/ep_index.html
+++ b/templates/admin/markets/stocks/ep_index.html
@@ -3,10 +3,11 @@
 
 {% block title %}Stocks - Admin{% endblock title %}
 
+{% block breadcrumbs %}<a href="/">Home</a> &rarr; <a href="{% url "admin_home_index" %}">Admin</a> &rarr; Stocks{% endblock breadcrumbs %}
+
 {% block content %}
 
 <h1>Stocks</h1>
-<p>&nbsp;</p>
 
 <div id="paginate" class="endless_page_template">
   {% include page_template %}
@@ -15,6 +16,5 @@
 {% endblock content %}
 
 {% block script %}
-<script src="{{ STATIC_URL }}js/endless-pagination.js" type="text/javascript"></script>
-<script type="text/javascript">$('#paginate').endlessPaginate();</script>
+  {% include "common/list_pagination_script.html" %}
 {% endblock script %}
