--- a/templates/admin/index.html
+++ b/templates/admin/index.html
@@ -1,6 +1,10 @@
 {% extends "base_two_columns.html" %}
 
-{% block title %}Home - Admin{% endblock title %}
+{% block browser_title %}Home - Admin{% endblock browser_title %}
+
+{% block breadcrumbs %}<a href="/">Home</a> &rarr; Admin{% endblock breadcrumbs %}
+
+{% block page_title %}Admin{% endblock page_title %}
 
 {% block content %}
 Admin area
