--- a/templates/profiles/signout.html
+++ b/templates/profiles/signout.html
@@ -1,10 +1,10 @@
 {% extends "base_one_column.html" %}
 
-{% block title %}Sign out{% endblock title %}
+{% block browser_title %}Sign out{% endblock browser_title %}
+
+{% block page_title %}Sign out{% endblock page_title %}
 
 {% block content %}
-
-<h1>Sign out</h1>
 
 <p>You have successfully been signed out.</p>
 
