--- a/templates/portfolios/portfolios/index.html
+++ b/templates/portfolios/portfolios/index.html
@@ -1,13 +1,13 @@
 {% extends "base_two_columns.html" %}
 {% load humanize %}
 
-{% block title %}Portfolios{% endblock title %}
+{% block browser_title %}Portfolios{% endblock browser_title %}
 
 {% block breadcrumbs %}<a href="/">Home</a> &rarr; Portfolios{% endblock breadcrumbs %}
 
-{% block content %}
+{% block page_title %}Portfolios{% endblock page_title %}
 
-<h1>Portfolios</h1>
+{% block content %}
 
 {% if portfolios %}
 <table class="table">
