--- a/templates/profiles/signin.html
+++ b/templates/profiles/signin.html
@@ -1,12 +1,12 @@
 {% extends "base_one_column.html" %}
 
-{% block title %}Sign in{% endblock title %}
+{% block browser_title %}Sign in{% endblock browser_title %}
 
 {% block breadcrumbs %}<a href="/">Home</a> &rarr; Sign in{% endblock breadcrumbs %}
 
-{% block content %}
+{% block page_title %}Sign in{% endblock page_title %}
 
-<h1>Sign in</h1>
+{% block content %}
 
 {% if form.errors %}
 <div class="alert alert-error">
