--- a/templates/portfolios/transactions/index_global.html
+++ b/templates/portfolios/transactions/index_global.html
@@ -3,7 +3,7 @@
 
 {% block browser_title %}Transactions{% endblock browser_title %}
 
-{% block breadcrumbs %}<a href="/">Home</a> &rarr; Transactions</a>{% endblock breadcrumbs %}
+{% block breadcrumbs %}<a href="/">Dashboard</a> &rarr; Transactions</a>{% endblock breadcrumbs %}
 
 {% block page_title %}Transactions{% endblock page_title %}
 
