--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -5,15 +5,17 @@ body {
 
 a { color: #0198e1; }
 
+/********************************/
+/* TABLES
+/********************************/
+
 header {
   background-color: rgba(0, 0, 0, 0.12);
   border-bottom: solid 1px rgba(0, 0, 0, 0.12);
   margin-bottom: 20px;
 }
 
-header .header {
-  height: 70px;
-}
+header .header { height: 70px; }
 
 header .header .title {
   float: left;
@@ -30,9 +32,7 @@ header .header .utilities {
   line-height: 40px;
 }
 
-header .utilities ul {
-  list-style-type: none;
-}
+header .utilities ul { list-style-type: none; }
 
 header .utilities ul li {
   display: block;
@@ -41,8 +41,10 @@ header .utilities ul li {
 
 header .menu-container {
   background-color: #0198e1;
+  box-shadow: 0 1px 10px rgba(0,0,0,.4);
 }
 
+/* bootstrap override */
 header .menu-container .navbar-inner {
   height: 41px;
   border: none;
@@ -50,6 +52,7 @@ header .menu-container .navbar-inner {
   box-shadow: 0 1px 10px rgba(0,0,0,.4);
 }
 
+/* bootstrap override */
 header .menu-container .navbar-inner li > a {
   padding: 0px 15px;
   height: 41px;
@@ -57,21 +60,23 @@ header .menu-container .navbar-inner li > a {
   text-shadow: none;
 }
 
+/* bootstrap override */
 header .menu-container .navbar-inner li.active > a,
+header .menu-container .navbar-inner li > a:hover,
 header .menu-container .navbar-inner li.dropdown.open > .dropdown-toggle {
   color: #ffffff;
   background-color: #222222;
 }
 
+/* bootstrap override */
 header .menu-container .navbar-inner li > a:hover {
-  background-color: #222222;
-  color: #ffffff;
   -moz-transition: all 200ms; /* FireFox */
   -webkit-transition: all 200ms; /* Safari / Chrome */
   -o-transition: all 200ms; /* Opera */
   transition: all 200ms; /* W3C */
 }
 
+/* bootstrap override */
 header .menu-container .navbar-inner li > a b { vertical-align: text-top; }
 
 header .breadcrumbs {
@@ -79,46 +84,99 @@ header .breadcrumbs {
   font-size: 12px;
 }
 
+header .page-title {
+  padding: 8px 0px;
+  color: #222222;
+  text-shadow: 0px 1px 1px rgba(255, 255, 255, 0.8);
+}
+
 header .page-title h1 {
-  color: #222222;
-  padding: 0px 0px 15px 0px;
-
+  margin: 0px;
+  padding: 0px;
+  font-size: 32px;
+  text-shadow: 0px 1px 1px rgba(255, 255, 255, 0.8);
 }
 
-section .main {
-  background-color: #f1f1f1;
-  color: #222222;
+header .page-title h1 small {
+  color: #0198e1;
 }
 
-.link-add { font-size: 15px; }
+/********************************/
+/* BODY
+/********************************/
+
+section.dashboard {
+  color: #e6e8eb;
+  background-color: #3b3d40;
+  border-radius: 5px;
+}
+
+section.dashboard .main {
+  margin: 0px;
+  padding: 15px;
+}
+
+section.dashboard .main h2 {
+  margin: 0px;
+  padding: 0px;
+  font-size: 26px;
+  font-weight: normal;
+}
+
+section.body { color: #222222; }
+
+section.body .main {
+  margin: 0px;
+  padding: 15px;
+}
+
+section.body .main h2 {
+  margin: 0px;
+  padding: 0px;
+  font-size: 26px;
+  font-weight: normal;
+}
+
+/********************************/
+/* TABLES
+/********************************/
 
 .table {
   font-size: 13px;
   border-top-left-radius: 15px;
   border-top-right-radius: 15px;
-
 }
 
-.table th {
-  color: #e2e2e2;
+.table thead th {
+  color: #222222;
+  text-shadow: 0 1px 0 rgba(255, 255, 255, 1);
 }
 
-.table tbody tr {
-
+.table tbody tr:hover td,
+.table tbody tr:hover th {
+  border-top: 1px solid #a0c2e5;
+  border-bottom: 1px solid #a0c2e5;
+  background-color: #dce7f2;
 }
 
-table tr th.align-right,
-table tr td.align-right {
+.table tr th.align-right,
+.table tr td.align-right {
   text-align: right;
+}
+
+.table tbody td {
+  font-size: 12px;
+  border-top: 1px solid #cccccc;
+  text-shadow: 0 1px 0 rgba(255, 255, 255, 1);
 }
 
 .table .small { font-size: 11px; }
 
-table tfoot { background-color: #494949; }
+.table tfoot { background-color: #494949; }
 
-table tfoot .pagination a { font-size: 13px; }
+.table tfoot .pagination a { font-size: 13px; }
 
-table tfoot .pagination input {
+.table tfoot .pagination input {
   font-size: 13px;
   width: 40px;
 }
@@ -127,7 +185,9 @@ table tfoot .pagination input {
 
 .indicator-loss { color: #ff0000; }
 
-/* jquery-ui */
+/********************************/
+/* JQUERY-UI CUSTOMIZATION
+/********************************/
 
 .ui-autocomplete-loading { background: url('../img/ui-anim_basic_16x16.gif') no-repeat 99% center }
 
