--- a/templates/base.html
+++ b/templates/base.html
@@ -112,16 +112,24 @@
   </div>
   <div class="page-title">
     <div class="container">
-      <h1>{% block page_title %}{% endblock page_title %}</h1>
+      <div class="page-title">
+        <h1>{% block page_title %}{% endblock page_title %}</h1>
+        <p>This is some helper text.</p>
+      </div>
     </div>
   </div>
 </header>
 
-<section role="body" class="container">
-  <div class="main">
-    {% block content_outer %}{% endblock content_outer %}
+{% if messages %}
+<section class="messages container">
+  <div class="alert alert-success">
+    <button type="button" class="close" data-dismiss="alert">&times;</button>
+    This is a message
   </div>
 </section>
+{% endif %}
+
+{% block content_outer %}{% endblock content_outer %}
 
 <footer>
   <div class="container">
