--- a/templates/portfolios/transactions/index_global_paged_content.html
+++ b/templates/portfolios/transactions/index_global_paged_content.html
@@ -2,7 +2,8 @@
 {% load humanize %}
 
 
-<table class="table">
+<table class="table table-striped table-hover table-condensed">
+  <caption>This is a caption for the table.</caption>
   <thead>
     <tr>
       <th style="width: 15%">Date</th>
