--- a/templates/base_two_columns.html
+++ b/templates/base_two_columns.html
@@ -6,9 +6,9 @@
     <div class="span12">
       {% block content %}{% endblock content %}
     </div>
-  </div>
-  <div class="main">
-
+    <div class="span4">
+      {% block sidebar %}{% endblock sidebar %}
+    </div>
   </div>
 </section>
 {% endblock content_outer %}
