--- a/templates/common/list_pagination_script.html
+++ b/templates/common/list_pagination_script.html
@@ -3,7 +3,7 @@
     $('#paginate')
         .endlessPaginate({
             onCompleted: function(context, fragment) {
-                $('html, body').animate({scrollTop: $('div#paginate').offset().top - 20}, 50);
+{#                $('html, body').animate({scrollTop: $('div#paginate').offset().top - 20}, 50);#}
             }
         });
 </script>
