--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -97,9 +97,7 @@ header .page-title h1 {
   text-shadow: 0px 1px 1px rgba(255, 255, 255, 0.8);
 }
 
-header .page-title h1 small {
-  color: #0198e1;
-}
+header .page-title h1 small { color: #0198e1; }
 
 /********************************/
 /* BODY
@@ -136,6 +134,103 @@ section.body .main h2 {
   font-size: 26px;
   font-weight: normal;
 }
+
+/********************************/
+/* WIDGETS
+/********************************/
+
+/*.widget {*/
+  /*margin-bottom: 20px;*/
+  /*border-radius: 5px;*/
+  /*color: #333333;*/
+/*}*/
+
+/*.widget-simple {*/
+  /*background-color: #f4f4f5; *//* f6f7ff */
+  /*border: 1px solid #ffffff;*/
+  /*box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.35);*/
+/*}*/
+
+/*.widget .widget-header {*/
+  /*margin: 10px 15px 0px 15px;*/
+  /*padding-bottom: 10px;*/
+  /*border-bottom: 1px solid #bbbbbb;*/
+/*}*/
+
+/*.widget .widget-header h4 {*/
+  /*margin: 0px;*/
+  /*padding: 0px;*/
+/*}*/
+
+/*.widget .widget-body {*/
+  /*margin: 0px 15px 15px 15px;*/
+  /*padding-top: 15px;*/
+  /*border-top: 1px solid #ffffff;*/
+/*}*/
+
+/*.widget .widget-footer {*/
+  /*padding: 0px 15px 15px 15px;*/
+/*}*/
+
+.widget {
+  margin-bottom: 20px;
+
+  border-radius: 5px;
+  color: #333333;
+}
+
+.widget-simple {
+  padding: 15px;
+  background-color: #f4f4f5; /* f6f7ff */
+  border: 1px solid #ffffff;
+  box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.35);
+}
+
+.widget .widget-header {
+  padding-bottom: 10px;
+  border-bottom: 1px solid #bbbbbb;
+}
+
+.widget .widget-header h4 {
+  margin: 0px;
+  padding: 0px;
+}
+
+.widget .widget-body {
+  padding-top: 15px;
+  border-top: 1px solid #ffffff;
+}
+
+.widget .widget-body ul {
+  margin: 0px;
+  padding: 0px;
+  list-style-type: none;
+}
+
+.widget .widget-body ul li {
+  padding-top: 15px;
+  padding-bottom: 20px;
+  border-bottom: 1px solid #bbbbbb;
+}
+
+.widget .widget-body ul li:first-child {
+  padding-top: 0px;
+}
+
+.widget .widget-body ul.dotted li {
+  border-bottom: 1px dotted #bbbbbb;
+}
+
+.widget .widget-body ul li:last-child {
+  padding-bottom: 5px;
+  border-bottom: none;
+}
+
+.widget .widget-footer {
+  border-top: 1px solid #ffffff;
+}
+
+.widget .widget-body p:last-child { margin-bottom: 0px; }
 
 /********************************/
 /* TABLES
