--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -6,7 +6,7 @@ body {
 a { color: #0198e1; }
 
 /********************************/
-/* TABLES
+/* HEADER
 /********************************/
 
 header {
@@ -42,6 +42,18 @@ header .utilities ul li {
 header .menu-container {
   background-color: #0198e1;
   box-shadow: 0 1px 10px rgba(0,0,0,.4);
+}
+
+header .fixed-navbar {
+  position: fixed;
+  top: 0px;
+  margin: auto;
+  z-index: 1000;
+  width: 100%;
+}
+
+header .fixed-navbar + .page-title {
+  margin-top: 78px;
 }
 
 /* bootstrap override */
