--- a/templates/base.html
+++ b/templates/base.html
@@ -74,7 +74,7 @@
       </div>
     </div>
   </div>
-  <div class="menu-container">
+  <div id="fixed-nav" class="menu-container">
     <div class="navbar navbar-static-top">
       <div class="navbar-inner">
         <div class="container">
@@ -143,6 +143,23 @@
 
 <script src="{{ STATIC_URL }}js/application.js" type="text/javascript"></script>
 {% block script %}{% endblock script %}
+<script type="text/javascript">
+  var fixed = false;
+
+  $(document).scroll(function() {
+      if( $(this).scrollTop() >= 71 ) {
+          if( !fixed ) {
+              fixed = true;
+              $('#fixed-nav').addClass('fixed-navbar')
+          }                                           // It won't matter when static
+      } else {
+          if( fixed ) {
+              fixed = false;
+              $('#fixed-nav').removeClass('fixed-navbar');
+          }
+      }
+  });
+</script>
 
 </body>
 </html>
